# me-405

./: README.md
FinalProject/: Makefile  Project.elf  Project.hex  adc.cpp  doxygen.conf  encoder_drv.cpp  encoder_drv.h  imu_drv.cpp  main.cpp  motor_drv.cpp  motor_drv.h  pid.cpp  routes.cpp  routes.h  servo_drv.cpp  servo_drv.h  shares.h  task_control.cpp  task_control.h  task_encoder.cpp  task_imu.cpp  task_imu.h  task_motor.cpp  task_pid.cpp  task_pid.h  task_power.cpp  task_power.h  task_sensor.cpp  task_sensor.h  task_servo.cpp  task_servo.h  task_steer.cpp  task_steer.h  task_user.cpp  task_user.h
Test Project/: Makefile  Project.hex  encoder_drv.h  imu_drv.cpp  motor_drv.cpp  motor_drv.h  servo_drv.h  shares.h  task_motor.cpp  task_sensor.h  task_servo.cpp  task_servo.h  task_user.cpp
TestProject/: FinalProject.kdev4~  Makefile  TestProject.kdev4  adc.cpp  doxygen.conf  imu_drv.h  pid.cpp  pid.h  routes.cpp  satmath.cpp  satmath.h  servo_drv.cpp  task_sensor.cpp
bob/: CMakeLists.txt  bob.cpp  bob.h  bob.kdev4  main.cpp
lab1/: Makefile  classexampleTriangle.cpp  doxygen.conf  functionrecastexample.cpp  lab1.kdev4  main.cpp  motor_drv.cpp  motor_drv.h  task_brightness.cpp  task_motor.cpp  task_motor.h  task_user.cpp
lab2/: Makefile  doxygen.conf  lab1.kdev4  lab2.kdev4  main.cpp  motor_drv.cpp  motor_drv.h  shares.h  task_brightness.h  task_motor.cpp  task_motor.h  task_user.cpp  task_user.h
lab3/: Makefile  adc.cpp  encoder_drv.cpp  encoder_drv.h  lab3.kdev4  main.cpp  shares.h  task_brightness.cpp  task_encoder.cpp  task_encoder.h  task_motor.cpp  (+2 more)
(+709 files in other folders)
